--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,7 @@ ext {
     minSdk = 21
     targetSdk = 32
 
-    versionCode = 1
-    versionName = '0.0.1'
-
     appcompatVersion = '1.6.0-alpha05'
-    materialVersion = '1.6.1'
+    materialVersion = '1.7.0-alpha02'
+    lifecycle_version = "2.5.0-rc02"
 }
