--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,21 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file("../test.jks")
+            storePassword 'chooongg'
+            keyAlias 'chooongg'
+            keyPassword 'chooongg'
+        }
+        release {
+            storeFile file("../test.jks")
+            storePassword 'chooongg'
+            keyAlias 'chooongg'
+            keyPassword 'chooongg'
+        }
+    }
     compileSdk 32
-
     defaultConfig {
         applicationId "com.chooongg.learn"
         minSdk 21
@@ -16,8 +29,9 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -35,4 +49,5 @@ android {
 dependencies {
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
+    implementation project(path: ':core')
 }
