--- a/net/build.gradle
+++ b/net/build.gradle
@@ -30,4 +30,14 @@ android {
 
 dependencies {
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
+    // JSON解析
+    api 'com.google.code.gson:gson:2.9.0'
+    api 'com.github.getActivity:GsonFactory:6.0'
+    // 网络请求
+    api 'com.squareup.okhttp3:okhttp:5.0.0-alpha.6'
+    api 'com.squareup.retrofit2:retrofit:2.9.0'
+    api 'com.squareup.retrofit2:converter-gson:2.9.0'
+    api 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    // 调试工具-拦截器
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
 }
