--- a/core/build.gradle
+++ b/core/build.gradle
@@ -33,10 +33,14 @@ android {
 }
 
 dependencies {
+    api project(path: ':basic')
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
-    api project(path: ':basic')
+    implementation "androidx.activity:activity-ktx:$appcompatVersion"
     api 'androidx.work:work-runtime-ktx:2.8.0-alpha02'
+    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     api 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     api 'com.google.android.flexbox:flexbox:3.0.0'
     api 'com.github.getActivity:XXPermissions:15.0'
