--- a/core/build.gradle
+++ b/core/build.gradle
@@ -37,12 +37,17 @@ dependencies {
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.activity:activity-ktx:$appcompatVersion"
-    api 'androidx.work:work-runtime-ktx:2.8.0-alpha02'
     api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    api 'androidx.work:work-runtime-ktx:2.8.0-alpha02'
+    api 'androidx.navigation:navigation-ui-ktx:2.5.0-rc01'
+    api 'androidx.navigation:navigation-fragment-ktx:2.5.0-rc01'
     api 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     api 'com.google.android.flexbox:flexbox:3.0.0'
     api 'com.github.getActivity:XXPermissions:15.0'
-
+    api 'com.github.getActivity:XXPermissions:15.0'
+    // 下拉刷新-上拉加载
+    api 'io.github.scwang90:refresh-layout-kernel:2.0.5'
+    api 'io.github.scwang90:refresh-header-classics:2.0.5'
 }
