--- a/core/build.gradle
+++ b/core/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     api project(path: ':basic')
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
-    implementation "androidx.activity:activity-ktx:$appcompatVersion"
+    api "androidx.activity:activity-ktx:$appcompatVersion"
     api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -46,7 +46,7 @@ dependencies {
     api 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     api 'com.google.android.flexbox:flexbox:3.0.0'
     api 'com.github.getActivity:XXPermissions:15.0'
-    api 'com.github.getActivity:XXPermissions:15.0'
+    api 'com.github.fondesa:recycler-view-divider:3.5.0'
     // 下拉刷新-上拉加载
     api 'io.github.scwang90:refresh-layout-kernel:2.0.5'
     api 'io.github.scwang90:refresh-header-classics:2.0.5'
