--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <activity
             android:name=".topAppBar.TopAppBarActivity"
             android:label="TopAppBar" />
-
+        <activity
+            android:name=".topAppBar.TopAppBarLayoutActivity"
+            android:label="TopAppBarLayout" />
 
     </application>
 
