--- a/settings.gradle
+++ b/settings.gradle
@@ -18,4 +18,5 @@ include ':app'
 include ':basic'
 include ':core'
 include ':net'
-include ':stateLayout'
+include ':extend-stateLayout'
+include ':extend-adapter'
