--- a/core/build.gradle
+++ b/core/build.gradle
@@ -40,8 +40,9 @@ dependencies {
     api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    api 'androidx.webkit:webkit:1.5.0-beta01'
     api 'androidx.work:work-runtime-ktx:2.8.0-alpha02'
-    api 'androidx.constraintlayout:constraintlayout:2.0.4'
+    api 'androidx.constraintlayout:constraintlayout:2.1.4'
     api 'androidx.navigation:navigation-ui-ktx:2.5.0-rc01'
     api 'androidx.navigation:navigation-fragment-ktx:2.5.0-rc01'
     api 'androidx.viewpager2:viewpager2:1.1.0-beta01'
