--- a/net/build.gradle
+++ b/net/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    api project(path: ':basic')
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     // JSON解析
     api 'com.google.code.gson:gson:2.9.0'
