--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,20 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.INFO" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
         <activity android:name=".MainActivity" />
+
+
+        <activity
+            android:name=".eventFlow.EventFlowActivity"
+            android:label="EventFlow" />
+
 
         <activity
             android:name=".stateLayout.StateLayoutActivity"
@@ -34,7 +43,6 @@
         <activity
             android:name=".topAppBar.TopAppBarLayoutActivity"
             android:label="TopAppBarLayout" />
-
 
     </application>
 
