--- a/extend-stateLayout/build.gradle
+++ b/extend-stateLayout/build.gradle
@@ -4,12 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk rootProject.ext.compileSdk
 
     defaultConfig {
-        minSdk 21
-        targetSdk 32
-
+        minSdk rootProject.ext.minSdk
+        targetSdk rootProject.ext.targetSdk
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -33,7 +32,7 @@ android {
 
 
 dependencies {
-    api project(path: ':basic')
+    implementation project(path: ':basic')
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
 }
