--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,18 @@ task clean(type: Delete) {
 }
 
 ext {
-    compileSdk = 32
-    minSdk = 21
-    targetSdk = 32
-
-    appcompatVersion = '1.6.0-alpha05'
-    materialVersion = '1.7.0-alpha02'
-    lifecycle_version = "2.5.0-rc02"
+    versionConfig = [
+            versionCode: 1,
+            versionName: '1.0.0',
+    ]
+    sdkConfig = [
+            compileSdk: 32,
+            minSdk    : 21,
+            targetSdk : 32,
+    ]
+    dependenciesVersion = [
+            appcompatVersion : '1.6.0-alpha05',
+            materialVersion  : '1.7.0-alpha03',
+            lifecycleVersion: "2.5.0-rc02"
+    ]
 }
