--- a/extend-stateLayout/build.gradle
+++ b/extend-stateLayout/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk rootProject.ext.compileSdk
+    compileSdk sdkConfig.compileSdk
 
     defaultConfig {
-        minSdk rootProject.ext.minSdk
-        targetSdk rootProject.ext.targetSdk
+        minSdk sdkConfig.minSdk
+        targetSdk sdkConfig.targetSdk
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -33,6 +33,6 @@ android {
 
 dependencies {
     implementation project(path: ':basic')
-    implementation "com.google.android.material:material:$materialVersion"
-    implementation "androidx.appcompat:appcompat:$appcompatVersion"
+    implementation "com.google.android.material:material:$dependenciesVersion.materialVersion"
+    implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
 }
