--- a/core/build.gradle
+++ b/core/build.gradle
@@ -53,3 +53,9 @@ dependencies {
     api 'io.github.scwang90:refresh-layout-kernel:2.0.5'
     api 'io.github.scwang90:refresh-header-classics:2.0.5'
 }
+
+ext {
+    PUBLISH_ARTIFACT_ID = "core"
+}
+
+apply from: '../publish.gradle'
