--- a/extend-adapter/build.gradle
+++ b/extend-adapter/build.gradle
@@ -19,14 +19,20 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
+    api 'androidx.recyclerview:recyclerview:1.3.0-beta01'
 }
+
+ext {
+    PUBLISH_ARTIFACT_ID = "adapter"
+}
+
+apply from: '../publish.gradle'
