--- a/extend-adapter/build.gradle
+++ b/extend-adapter/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
+
+group = 'com.chooongg.learn'
 
 android {
     compileSdk sdkConfig.compileSdk
@@ -31,8 +34,22 @@ dependencies {
     api 'androidx.recyclerview:recyclerview:1.3.0-beta01'
 }
 
-ext {
-    PUBLISH_ARTIFACT_ID = "adapter"
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = "com.chooongg.learn"
+                artifactId = "adapter"
+                version = versionConfig.versionName
+            }
+        }
+    }
 }
 
-apply from: '../publish.gradle'
+//
+//ext {
+//    PUBLISH_ARTIFACT_ID = "adapter"
+//}
+//
+//apply from: '../publish.gradle'
