--- a/extend-stateLayout/build.gradle
+++ b/extend-stateLayout/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
+
+group = 'com.chooongg.learn'
 
 android {
     compileSdk sdkConfig.compileSdk
@@ -37,8 +40,22 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
 }
 
-ext {
-    PUBLISH_ARTIFACT_ID = "stateLayout"
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = "com.chooongg.learn"
+                artifactId = "stateLayout"
+                version = versionConfig.versionName
+            }
+        }
+    }
 }
 
-apply from: '../publish.gradle'
+//
+//ext {
+//    PUBLISH_ARTIFACT_ID = "stateLayout"
+//}
+//
+//apply from: '../publish.gradle'
