--- a/net/build.gradle
+++ b/net/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
+
+group = 'com.chooongg.learn'
 
 android {
     compileSdk sdkConfig.compileSdk
@@ -41,3 +44,23 @@ dependencies {
     // 调试工具-拦截器
     implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
 }
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = "com.chooongg.learn"
+                artifactId = "net"
+                version = versionConfig.versionName
+            }
+        }
+    }
+}
+
+//
+//ext {
+//    PUBLISH_ARTIFACT_ID = "net"
+//}
+//
+//apply from: '../publish.gradle'
