--- a/core/build.gradle
+++ b/core/build.gradle
@@ -64,7 +64,7 @@ afterEvaluate {
                 from components.release
                 groupId = "com.chooongg.learn"
                 artifactId = "core"
-                version = versionConfig.versionName
+                version = rootProject.versionConfig.versionName
             }
         }
     }
