--- a/extend-adapter/build.gradle
+++ b/extend-adapter/build.gradle
@@ -41,7 +41,7 @@ afterEvaluate {
                 from components.release
                 groupId = "com.chooongg.learn"
                 artifactId = "adapter"
-                version = rootProject.versionConfig.versionName
+                version = rootProject.ext.versionConfig.versionName
             }
         }
     }
