--- a/net/build.gradle
+++ b/net/build.gradle
@@ -52,7 +52,7 @@ afterEvaluate {
                 from components.release
                 groupId = "com.chooongg.learn"
                 artifactId = "net"
-                version = rootProject.ext.versionConfig.versionName
+                version = rootProject.ext.versionName
             }
         }
     }
