--- a/extend-eventFlow/build.gradle
+++ b/extend-eventFlow/build.gradle
@@ -44,7 +44,7 @@ afterEvaluate {
                 from components.release
                 groupId = "com.chooongg.learn"
                 artifactId = "eventFlow"
-                version = rootProject.ext.versionConfig.versionName
+                version = rootProject.ext.versionName
             }
         }
     }
