--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.chooongg.core">
 
     <application>
@@ -8,6 +9,16 @@
         <meta-data
             android:name="ScopedStorage"
             android:value="true" />
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data
+                android:name="com.chooongg.core.CoreInitializer"
+                android:value="androidx.startup" />
+        </provider>
 
     </application>
 </manifest>
