--- a/core/build.gradle
+++ b/core/build.gradle
@@ -32,6 +32,11 @@ android {
         viewBinding true
         dataBinding true
     }
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+        }
+    }
 }
 
 dependencies {
