--- a/extend-eventFlow/build.gradle
+++ b/extend-eventFlow/build.gradle
@@ -28,6 +28,11 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+        }
+    }
 }
 
 dependencies {
