--- a/extend-stateLayout/build.gradle
+++ b/extend-stateLayout/build.gradle
@@ -31,6 +31,11 @@ android {
     buildFeatures {
         viewBinding true
     }
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+        }
+    }
 }
 
 
