新增网络请求Demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,11 @@
             android:label="TopAppBarLayout"
             android:launchMode="singleTop" />
 
+        <activity
+            android:name=".network.NetworkActivity"
+            android:label="Network"
+            android:launchMode="singleTop" />
+
     </application>
 
 </manifest>
