--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,13 @@ ext {
     versionCode = 1
     versionName = "1.0.0"
     sdkConfig = [
-            compileSdk: 32,
+            compileSdk: 33,
             minSdk    : 21,
-            targetSdk : 32,
+            targetSdk : 33,
     ]
     dependenciesVersion = [
-            appcompatVersion: '1.6.0-alpha05',
-            materialVersion : '1.7.0-alpha03',
-            lifecycleVersion: "2.5.0-rc02"
+            appcompatVersion: '1.6.0-beta01',
+            materialVersion : '1.7.0-beta01',
+            lifecycleVersion: "2.6.0-alpha01"
     ]
 }
