--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
     implementation project(path: ':core')
     implementation project(path: ':net')
-    implementation project(path: ':extend-stateLayout')
+    implementation project(path: ':extend-echarts')
     implementation project(path: ':extend-eventFlow')
+    implementation project(path: ':extend-stateLayout')
 }
