--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
+
         <activity
             android:name=".SplashActivity"
             android:exported="true">
@@ -24,7 +25,15 @@
         </activity>
 
 
-        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTask" />
+
+
+        <activity
+            android:name=".echarts.EChartsActivity"
+            android:label="ECharts"
+            android:launchMode="singleTop" />
 
 
         <activity
