--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,13 @@ ext {
     versionCode = 1
     versionName = "1.0.0"
     sdkConfig = [
-            compileSdk: 33,
+            compileSdk: 32,
             minSdk    : 21,
-            targetSdk : 33,
+            targetSdk : 32,
     ]
     dependenciesVersion = [
-            appcompatVersion: '1.6.0-beta01',
+            appcompatVersion: '1.5.0',
             materialVersion : '1.7.0-beta01',
-            lifecycleVersion: "2.6.0-alpha01"
+            lifecycleVersion: "2.5.1"
     ]
 }
