--- a/core/build.gradle
+++ b/core/build.gradle
@@ -48,10 +48,9 @@ dependencies {
     api 'androidx.constraintlayout:constraintlayout:2.2.0-alpha03'
     api 'androidx.navigation:navigation-fragment-ktx:2.5.1'
     api 'androidx.navigation:navigation-ui-ktx:2.5.1'
-    api 'androidx.paging:paging-runtime-ktx:3.1.1'
     api 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     api 'androidx.work:work-runtime-ktx:2.7.1'
-    api 'androidx.webkit:webkit:1.5.0-rc01'
+    api 'androidx.webkit:webkit:1.6.0-alpha01'
     api 'com.google.android.flexbox:flexbox:3.0.0'
     api 'com.github.getActivity:XXPermissions:16.0'
     api 'com.github.fondesa:recycler-view-divider:3.5.0'
