--- a/extend-adapter/build.gradle
+++ b/extend-adapter/build.gradle
@@ -34,7 +34,9 @@ android {
 }
 
 dependencies {
-    api 'androidx.recyclerview:recyclerview:1.3.0-beta01'
+    api 'androidx.recyclerview:recyclerview:1.3.0-beta02'
+    api 'androidx.paging:paging-runtime-ktx:3.1.1'
+    api 'com.google.android.flexbox:flexbox:3.0.0'
 }
 
 afterEvaluate {
