--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,14 +5,13 @@ plugins {
 }
 
 android {
+    namespace 'com.chooongg.core'
     compileSdk sdkConfig.compileSdk
-
     defaultConfig {
         minSdk sdkConfig.minSdk
         targetSdk sdkConfig.targetSdk
         consumerProguardFiles "consumer-rules.pro"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -41,7 +40,6 @@ dependencies {
     api project(path: ':basic')
     implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
     implementation "com.google.android.material:material:$dependenciesVersion.materialVersion"
-//    api 'androidx.core:core-ktx:1.9.0-beta01'
     api "androidx.lifecycle:lifecycle-runtime-ktx:$dependenciesVersion.lifecycleVersion"
     api "androidx.lifecycle:lifecycle-livedata-ktx:$dependenciesVersion.lifecycleVersion"
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:$dependenciesVersion.lifecycleVersion"
