--- a/extend-echarts/build.gradle
+++ b/extend-echarts/build.gradle
@@ -5,14 +5,13 @@ plugins {
 }
 
 android {
+    namespace 'com.chooongg.echarts'
     compileSdk sdkConfig.compileSdk
-
     defaultConfig {
         minSdk sdkConfig.minSdk
         targetSdk sdkConfig.targetSdk
         consumerProguardFiles "consumer-rules.pro"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -35,7 +34,7 @@ android {
 
 dependencies {
     implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
-    implementation 'androidx.webkit:webkit:1.5.0-rc01'
+    implementation 'androidx.webkit:webkit:1.6.0-alpha01'
 }
 
 afterEvaluate {
