--- a/extend-eventFlow/build.gradle
+++ b/extend-eventFlow/build.gradle
@@ -5,14 +5,13 @@ plugins {
 }
 
 android {
+    namespace 'com.chooongg.eventFlow'
     compileSdk sdkConfig.compileSdk
-
     defaultConfig {
         minSdk sdkConfig.minSdk
         targetSdk sdkConfig.targetSdk
         consumerProguardFiles "consumer-rules.pro"
     }
-
     buildTypes {
         release {
             minifyEnabled false
