--- a/net/build.gradle
+++ b/net/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 android {
+    namespace 'com.chooongg.net'
     compileSdk sdkConfig.compileSdk
-
     defaultConfig {
         minSdk sdkConfig.minSdk
         targetSdk sdkConfig.targetSdk
@@ -46,6 +46,7 @@ dependencies {
     api 'com.squareup.retrofit2:converter-scalars:2.9.0'
     // 调试工具-拦截器
     implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
+    implementation 'com.localebro:okhttpprofiler:1.0.8'
 }
 
 afterEvaluate {
