--- a/basic/build.gradle
+++ b/basic/build.gradle
@@ -35,7 +35,7 @@ android {
 dependencies {
     implementation "com.google.android.material:material:$dependenciesVersion.materialVersion"
     implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
-    api 'androidx.core:core-ktx:1.9.0-beta01'
+    api 'androidx.core:core-ktx:1.9.0'
     api "androidx.startup:startup-runtime:1.2.0-alpha01"
 
     api 'com.tencent:mmkv:1.2.14'
