--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ task clean(type: Delete) {
 
 ext {
     versionCode = 1
-    versionName = "1.0.21"
+    versionName = "1.0.22"
     sdkConfig = [
             compileSdk: 33,
             minSdk    : 21,
             targetSdk : 33,
     ]
     dependenciesVersion = [
-            appcompatVersion: '1.6.0-beta01',
+            appcompatVersion: '1.6.0-rc01',
             materialVersion : '1.8.0-alpha01',
             lifecycleVersion: "2.5.1"
     ]
