--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include ':app'
 include ':basic'
 include ':core'
 include ':net'
+include ':mediaPicker'
 include ':extend-adapter'
 include ':extend-echarts'
 include ':extend-eventFlow'
