--- a/mediaPicker/build.gradle
+++ b/mediaPicker/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'com.chooongg.adapter'
+    namespace 'com.chooongg.mediaPicker'
     compileSdk sdkConfig.compileSdk
     defaultConfig {
         minSdk sdkConfig.minSdk
@@ -33,9 +33,10 @@ android {
 }
 
 dependencies {
-    api 'androidx.recyclerview:recyclerview:1.3.0-rc01'
-    api 'androidx.paging:paging-runtime-ktx:3.1.1'
-    api 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation project(path: ':core')
+    implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$dependenciesVersion.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$dependenciesVersion.lifecycleVersion"
 }
 
 afterEvaluate {
@@ -44,7 +45,7 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
                 groupId = "com.chooongg.learn"
-                artifactId = "adapter"
+                artifactId = "mediaPicker"
                 version = rootProject.ext.versionName
             }
         }
@@ -53,7 +54,7 @@ afterEvaluate {
 
 //
 //ext {
-//    PUBLISH_ARTIFACT_ID = "adapter"
+//    PUBLISH_ARTIFACT_ID = "eventFlow"
 //}
 //
 //apply from: '../publish.gradle'
