--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$dependenciesVersion.appcompatVersion"
     implementation project(path: ':core')
     implementation project(path: ':net')
+    implementation project(path: ':filePicker')
+    implementation project(path: ':mediaPicker')
     implementation project(path: ':extend-echarts')
     implementation project(path: ':extend-eventFlow')
     implementation project(path: ':extend-stateLayout')
