--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ ext {
             targetSdk : 33,
     ]
     dependenciesVersion = [
-            appcompatVersion: '1.6.0-rc01',
+            appcompatVersion: '1.7.0-alpha01',
             materialVersion : '1.8.0-alpha01',
             lifecycleVersion: "2.6.0-alpha02"
     ]
